# SimpleFactoryGame

./: .gitignore  CMakeLists.txt
include/: entity.hpp  game.hpp  inventory.hpp  item.hpp  moveable_entity.hpp  player.hpp  world.hpp
src/: main.cpp
